kubernetes/monitoring/prometheus/prometheus-push-gateway/prometheus-push-gateway.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-push-gateway
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-push-gateway
  template:
    metadata:
      labels:
        app: prometheus-push-gateway
    spec:
      # Essential
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: la1r.workload/essential
                operator: In
                values:
                - "true"      
      
      containers:
      - name: prometheus-push-gateway
        ports:
        - containerPort: 9091
        image: prom/pushgateway
        resources:
          limits:
            cpu: 250m
            memory: 180Mi
          requests:
            cpu: 102m
            memory: 180Mi
        args:
          - --web.enable-admin-api
          - --persistence.file=/pushgatewaydata/persistence
        volumeMounts:
        - name: prometheus-push-gateway-volume
          mountPath: /pushgatewaydata

      # curl "http://<push-proxy-service>/push?job=test&metric=my_metric&value=123"
      - name: push-proxy
        image: golang:alpine
        workingDir: /app
        command: ["sh", "-c"]
        args: ["go run main.go"]
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: push-proxy-code-volume
          mountPath: /app
      volumes:
      - name: prometheus-push-gateway-volume
        persistentVolumeClaim:
          claimName: prometheus-push-gateway-data-claim
      - name: push-proxy-code-volume
        configMap:
          name: push-proxy-code
      
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-push-gateway
  namespace: monitoring
spec:
  ports:
  - name: http-post
    port: 80
    targetPort: 9091
  - name: http-get
    port: 8080
    targetPort: 8080
  selector:
    app: prometheus-push-gateway
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-push-https
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
  - secretName: prometheus-push-bas-tls
  rules:
  - host: prometheus-push.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-push-gateway
            port:
              number: 80
  - host: prometheus-get.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-push-gateway
            port:
              number: 8080
